2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* schemas/desktop_gnome_interface.schemas.in:
	Add default value for monospace font name
	(Patch by Owen Taylor).
	
2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* configure.in:
	Remove libxml and libxslt deps.
	
2003-07-08  Anders Carlsson  <andersca@codefactory.se>

	* Makefile.am:
	* configure.in:
	* help-converters/Makefile.am:
	* help-converters/README:
	* help-converters/docbook/.cvsignore:
	* help-converters/docbook/AUTHORS:
	* help-converters/docbook/Makefile.am:
	* help-converters/docbook/README:
	* help-converters/docbook/gnome-customization/.cvsignore:
	* help-converters/docbook/gnome-customization/Makefile.am:
	* help-converters/docbook/gnome-customization/gnome-custom.xsl:
	* help-converters/docbook/gnome-customization/gnome-customization.x
	sl:
	* help-converters/docbook/gnome-customization/l10n.xml:
	* help-converters/docbook/gnome-db2html3.c:
	* help-converters/gnome-vfs-module/.cvsignore:
	* help-converters/gnome-vfs-module/Makefile.am:
	* help-converters/gnome-vfs-module/help-method.c:
	* help-converters/gnome-vfs-module/help-method.h:
	* help-converters/gnome-vfs-module/help-methods.conf.in:
	* help-converters/info/.cvsignore:
	* help-converters/info/Makefile.am:
	* help-converters/info/data.h:
	* help-converters/info/html.c:
	* help-converters/info/html.h:
	* help-converters/info/main.c:
	* help-converters/info/parse.c:
	* help-converters/info/parse.h:
	* help-converters/info/utils.c:
	* help-converters/info/utils.h:
	* help-converters/info/version.h:
	* help-converters/man/.cvsignore:
	* help-converters/man/Makefile.am:
	* help-converters/man/README:
	* help-converters/man/gnome-man2html.c:
	* help-converters/man/man2html.8:
	Remove help converters (#98761)
	
2003-07-04  Anders Carlsson  <andersca@codefactory.se>

	* configure.in: Release 2.3.3.1

2003-07-02  Anders Carlsson  <andersca@codefactory.se>

	* doc/reference/.cvsignore:
	* doc/reference/Makefile.am: