@@ -1,3 +1,9 @@
+2003-07-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* libgnome/gnome-program.c: (gnome_program_postinit):
+	* libgnome/gnome-score.c: (gnome_score_child): Merge
+	fixes for bug #116794 + one more :)
+
 2003-07-08  Anders Carlsson  <andersca@codefactory.se>
 
 	* schemas/desktop_gnome_interface.schemas.in:
